updated the title

--- a/Neighborhood_Clustering.ipynb
+++ b/Neighborhood_Clustering.ipynb
@@ -22,7 +22,8 @@
         "id": "s_0qM5GiiH_c"
       },
       "source": [
-        "# IBM Data Science Coursera Capstone Project"
+        "# Applied Data Science Capstone Project\n",
+        "### IBM Data Science Professional Certificate"
       ]
     },
     {
@@ -34,7 +35,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,12 +45,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jF9OiEaCia1q",
-        "outputId": "97765882-8e56-4207-82e8-275a1dc70223"
+        "outputId": "cc00f7ca-daa0-4e9b-c9aa-3e9235da8b55"
       },
       "source": [
         "print('Hello Capstone Project Course!')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
