--- a/Clustering_Toronto_Neighborhoods.ipynb
+++ b/Clustering_Toronto_Neighborhoods.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Clustering Toronto Neighborhoods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1BjWk+mIWBVqgw2+D9SYC",
+      "authorship_tag": "ABX9TyO3Xvsc+POgcYv/qdR0BFZ7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,9 +55,10 @@
         "import pandas as pd\n",
         "import json\n",
         "import requests\n",
-        "from bs4 import BeautifulSoup"
+        "from bs4 import BeautifulSoup\n",
+        "import geocoder"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +88,7 @@
         "page=requests.get('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M').text\n",
         "soup=BeautifulSoup(page,'html.parser')"
       ],
-      "execution_count": 2,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -98,7 +99,7 @@
       "source": [
         "table = soup.find('table')"
       ],
-      "execution_count": 4,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -134,7 +135,7 @@
         "                                             'EtobicokeNorthwest':'Etobicoke Northwest','East YorkEast Toronto':'East York/East Toronto',\n",
         "                                             'MississaugaCanada Post Gateway Processing Centre':'Mississauga'})"
       ],
-      "execution_count": 28,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -143,23 +144,26 @@
         "id": "9wsjxf6uLO5o"
       },
       "source": [
-        "This is what the dataframe looks like."
+        "Finally I sort the dataframe by postalcode and see that there are 103 postal codes.\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3o1EoMrSSYlu",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "id": "Q4a93rLjJ2_N",
-        "outputId": "76749e1e-a122-4d0c-b308-84d2fcd6a7f8"
+        "outputId": "1b323967-7228-4df1-8ae4-6c780accaee2"
       },
       "source": [
+        "df=df.sort_values('PostalCode')\n",
+        "df = df.reset_index(drop=True)\n",
         "df.head()"
       ],
-      "execution_count": 30,
+      "execution_count": 130,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,61 +195,52 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>M3A</td>\n",
-              "      <td>North York</td>\n",
-              "      <td>Parkwoods</td>\n",
+              "      <td>M1B</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Malvern, Rouge</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>M4A</td>\n",
-              "      <td>North York</td>\n",
-              "      <td>Victoria Village</td>\n",
+              "      <td>M1C</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Rouge Hill, Port Union, Highland Creek</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>M5A</td>\n",
-              "      <td>Downtown Toronto</td>\n",
-              "      <td>Regent Park, Harbourfront</td>\n",
+              "      <td>M1E</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Guildwood, Morningside, West Hill</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>M6A</td>\n",
-              "      <td>North York</td>\n",
-              "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+              "      <td>M1G</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Woburn</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>M7A</td>\n",
-              "      <td>Queen's Park</td>\n",
-              "      <td>Ontario Provincial Government</td>\n",
+              "      <td>M1H</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Cedarbrae</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "  PostalCode           Borough                      Neighborhood\n",
-              "0        M3A        North York                         Parkwoods\n",
-              "1        M4A        North York                  Victoria Village\n",
-              "2        M5A  Downtown Toronto         Regent Park, Harbourfront\n",
-              "3        M6A        North York  Lawrence Manor, Lawrence Heights\n",
-              "4        M7A      Queen's Park     Ontario Provincial Government"
+              "  PostalCode      Borough                            Neighborhood\n",
+              "0        M1B  Scarborough                          Malvern, Rouge\n",
+              "1        M1C  Scarborough  Rouge Hill, Port Union, Highland Creek\n",
+              "2        M1E  Scarborough       Guildwood, Morningside, West Hill\n",
+              "3        M1G  Scarborough                                  Woburn\n",
+              "4        M1H  Scarborough                               Cedarbrae"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 130
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "brNh4b22LR-7"
-      },
-      "source": [
-        "The dataframe has 103 entry rows and 3 feature columns."
       ]
     },
     {
@@ -255,12 +250,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8C-jBkcYDsjC",
-        "outputId": "70c50ddc-d635-46c4-b23f-4a84fdd73dc9"
+        "outputId": "c082ce62-04a9-4337-e5fc-a2405f172830"
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 25,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -272,7 +267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 121
         }
       ]
     },
@@ -286,15 +281,161 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "JloLA5zrMpMa"
+        "id": "h8Jtti4tikw3"
       },
       "source": [
-        ""
+        "Geocoder was not working so I used the csv file provided by course instructor to access latitude and longitude data corresponding to toronto postal codes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "nnjZGM5mdmFb",
+        "outputId": "946e3244-8c41-4174-8b2c-c07f4df255c5"
+      },
+      "source": [
+        "#I uploaded the csv file to google drive and made it public\n",
+        "url='https://drive.google.com/file/d/1pwkLe6YsjJjkgamQ5O9eSgzUlp6fAwZs/view?usp=sharing'\n",
+        "file_id=url.split('/')[-2]\n",
+        "#Read the file and convert it to a pandas dataframe\n",
+        "dwn_url='https://drive.google.com/uc?id=' + file_id\n",
+        "df_ll= pd.read_csv(dwn_url)\n",
+        "#Combine this dataframe with the neighborhood dataframe from before\n",
+        "df=pd.concat([df,df_ll[['Latitude','Longitude']]],axis=1)\n",
+        "df.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PostalCode</th>\n",
+              "      <th>Borough</th>\n",
+              "      <th>Neighborhood</th>\n",
+              "      <th>Latitude</th>\n",
+              "      <th>Longitude</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>M1B</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Malvern, Rouge</td>\n",
+              "      <td>43.806686</td>\n",
+              "      <td>-79.194353</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>M1C</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Rouge Hill, Port Union, Highland Creek</td>\n",
+              "      <td>43.784535</td>\n",
+              "      <td>-79.160497</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>M1E</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Guildwood, Morningside, West Hill</td>\n",
+              "      <td>43.763573</td>\n",
+              "      <td>-79.188711</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>M1G</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Woburn</td>\n",
+              "      <td>43.770992</td>\n",
+              "      <td>-79.216917</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>M1H</td>\n",
+              "      <td>Scarborough</td>\n",
+              "      <td>Cedarbrae</td>\n",
+              "      <td>43.773136</td>\n",
+              "      <td>-79.239476</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  PostalCode      Borough                            Neighborhood   Latitude  \\\n",
+              "0        M1B  Scarborough                          Malvern, Rouge  43.806686   \n",
+              "1        M1C  Scarborough  Rouge Hill, Port Union, Highland Creek  43.784535   \n",
+              "2        M1E  Scarborough       Guildwood, Morningside, West Hill  43.763573   \n",
+              "3        M1G  Scarborough                                  Woburn  43.770992   \n",
+              "4        M1H  Scarborough                               Cedarbrae  43.773136   \n",
+              "\n",
+              "   Longitude  \n",
+              "0 -79.194353  \n",
+              "1 -79.160497  \n",
+              "2 -79.188711  \n",
+              "3 -79.216917  \n",
+              "4 -79.239476  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 131
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qunM02igjuiW",
+        "outputId": "abd26b94-028d-4577-cf77-9228efcd6123"
+      },
+      "source": [
+        "df.shape"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(103, 5)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 132
+        }
+      ]
     },
     {
       "cell_type": "markdown",
