Part 2 complete, no need for google drive link

--- a/Clustering_Toronto_Neighborhoods.ipynb
+++ b/Clustering_Toronto_Neighborhoods.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Clustering Toronto Neighborhoods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO3Xvsc+POgcYv/qdR0BFZ7",
+      "authorship_tag": "ABX9TyPLnOVYXsC8hRC15ZsfOr+y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,7 +135,7 @@
         "                                             'EtobicokeNorthwest':'Etobicoke Northwest','East YorkEast Toronto':'East York/East Toronto',\n",
         "                                             'MississaugaCanada Post Gateway Processing Centre':'Mississauga'})"
       ],
-      "execution_count": 129,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -156,14 +156,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "1b323967-7228-4df1-8ae4-6c780accaee2"
+        "outputId": "9ea3bfff-4c7d-4b69-dfeb-bf3ff33f0b98"
       },
       "source": [
         "df=df.sort_values('PostalCode')\n",
         "df = df.reset_index(drop=True)\n",
         "df.head()"
       ],
-      "execution_count": 130,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,7 +239,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 130
+          "execution_count": 137
         }
       ]
     },
@@ -250,12 +250,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8C-jBkcYDsjC",
-        "outputId": "c082ce62-04a9-4337-e5fc-a2405f172830"
+        "outputId": "184bd60b-7dfd-43af-9924-3235c3e8e505"
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 121,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -267,7 +267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 121
+          "execution_count": 138
         }
       ]
     },
@@ -297,20 +297,17 @@
           "height": 204
         },
         "id": "nnjZGM5mdmFb",
-        "outputId": "946e3244-8c41-4174-8b2c-c07f4df255c5"
+        "outputId": "5af4bb02-c2c2-4853-874b-541a18bdeb0e"
       },
       "source": [
-        "#I uploaded the csv file to google drive and made it public\n",
-        "url='https://drive.google.com/file/d/1pwkLe6YsjJjkgamQ5O9eSgzUlp6fAwZs/view?usp=sharing'\n",
-        "file_id=url.split('/')[-2]\n",
+        "url='https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0701EN-SkillsNetwork/labs_v1/Geospatial_Coordinates.csv'\n",
         "#Read the file and convert it to a pandas dataframe\n",
-        "dwn_url='https://drive.google.com/uc?id=' + file_id\n",
-        "df_ll= pd.read_csv(dwn_url)\n",
+        "df_ll= pd.read_csv(url)\n",
         "#Combine this dataframe with the neighborhood dataframe from before\n",
         "df=pd.concat([df,df_ll[['Latitude','Longitude']]],axis=1)\n",
         "df.head()"
       ],
-      "execution_count": 131,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +402,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 131
+          "execution_count": 139
         }
       ]
     },
@@ -416,12 +413,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qunM02igjuiW",
-        "outputId": "abd26b94-028d-4577-cf77-9228efcd6123"
+        "outputId": "2c521661-08a9-42ce-8e2f-629a7c7cb047"
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 132,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +430,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 132
+          "execution_count": 140
         }
       ]
     },
